# exoform

./: .gitignore  .gitmodules  Cargo.toml  README.md
client/: Cargo.toml  build.bat  build.sh  index.html
client/.cargo/: config.toml
client/assets/: index.html
client/src/: camera.rs  main.rs  mesh_generation.rs  resources.rs  ui.rs
client/src/ui/: util.rs
client/src/ui/graph/: mod.rs  sync.rs
crates/derive-macros/: Cargo.toml
crates/derive-macros/src/: lib.rs
server/: Cargo.toml  README.md
server/src/: coordinator.rs  file_store.rs  http.rs  main.rs  peer.rs  room.rs  util.rs
shared/: Cargo.toml
shared/src/: graph.rs  lib.rs  mesh.rs  node.rs  node_data.rs  protocol.rs
shared/src/canonical/: graph.rs  id.rs  mod.rs  node_data.rs
