[package]
authors = ["Philpax <me@philpax.me>"]
edition = "2021"
license = "MIT"
name = "exoform-client"
resolver = "2"
version = "0.1.0"

[dependencies]
anyhow = "1.0.57"
bevy = "0.8.0-dev"
bevy_egui = {path = "../crates/bevy_egui"}
bimap = "0.6.2"
glam = "0.20.5"
shared = {path = "../shared"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_web_fullscreen = {path = "../crates/bevy_web_fullscreen"}
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
