[package]
authors = ["Philpax <me@philpax.me>"]
edition = "2021"
license = "MIT"
name = "exoform-client"
resolver = "2"
version = "0.1.0"

[dependencies]
anyhow = "1.0.57"
bevy = "0.8.0"
bevy_egui = "0.15.0"
clap = {version = "3.2.12", features = ["derive"]}
glam = "0.20.5"
serde_json = "1.0"
shared = {path = "../shared"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_web_fullscreen = {path = "../crates/bevy_web_fullscreen"}
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
