[package]
authors = ["Philpax <me@philpax.me>"]
edition = "2021"
name = "sdfbox-server"
version = "0.1.0"

[dependencies]
anyhow = "1"
chrono = "0.4.19"
clap = {version = "^3.1.0", features = ["derive"]}
flate2 = "1.0.23"
http_tiny = "1.0.3"
itertools = "0.10"
malvolio = "0.3.1"
new_mime_guess = "4.0.1"
numtoa = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
lunatic = {version = "^0.9.1"}
