[package]
authors = ["Philpax <me@philpax.me>"]
edition = "2021"
license = "MIT"
name = "exoform-server"
resolver = "2"
version = "0.1.0"

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
clap = {version = "3.2.12", features = ["derive"]}
serde_json = "1.0.82"
shared = {path = "../shared"}
tokio = {version = "1.20.0", features = ["full"]}
