[package]
edition = "2021"
name = "shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
derive-macros = {path = "../crates/derive-macros"}
glam = "0.20.5"
saft = "0.30.0"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0.31"
tokio = {version = "1.20.0", features = ["full"]}
